[gd_scene load_steps=3 format=2]

[ext_resource path="res://Projectiles/Icelance.tscn" type="PackedScene" id=1]
[ext_resource path="res://Projectiles/IceFlurry.gd" type="Script" id=2]

[node name="IceFlurry" type="Node2D"]
script = ExtResource( 2 )

[node name="Projectile1" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 20 )

[node name="Projectile2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 10 )

[node name="Projectile3" parent="." instance=ExtResource( 1 )]

[node name="Projectile4" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -10 )

[node name="Projectile5" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -20 )
